--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Github action to use to upload file to AWS S3.",
   "main": "s3-upload.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "package": "ncc build s3-upload.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "@aws-sdk/client-s3": "^3.462.0",
     "@aws-sdk/lib-storage": "^3.462.0",
     "mime-types": "^2.1.35"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
   }
 }
